name:           Stats-helper
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         sergey
data-files:     
                src/Fun_Test.hs, 
                src/Fun.hs, 
                src/Main.hs

library
  hs-source-dirs:   src
  build-depends:    
                   base >= 4,
                   HUnit >=1.2.5 && <1.3
  ghc-options:      -Wall
  exposed-modules:  Fun

executable Stats-helper
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

test-suite fun_test_x
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  ghc-options:     -Wall -rtsopts
  build-depends:   
                         base >= 4, HUnit >= 1.2 && < 2, QuickCheck >= 2.4, test-framework >= 0.4.1, test-framework-quickcheck2, test-framework-hunit,
                         Stats-helper
  other-modules:   FunTest
  hs-source-dirs:  test
  main-is:         fun_test_x.hs

